--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Test scene
+Assets/Scenes/Test.unity*
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
